# virtualscenarios

./: A.cpp  A.hpp  AUtilities.cpp  AUtilities.hpp  B.cpp  B.hpp  BUtilities.cpp  BUtilities.hpp  C.cpp  C.hpp  CMakeLists.txt  CUtilities.cpp  CUtilities.hpp  ScenarioA.cpp  ScenarioB.cpp  ScenarioC.cpp
